# noise_floor_reporter

./: README.md  claude.md  config.example.json  config.soapysdr.example.json  pyproject.toml  setup-dev.sh
noise_floor_reporter/: __init__.py  cli.py  measure.py  report.py
noise_floor_reporter/backends/: __init__.py  base.py  hackrf.py  rtlsdr.py  sdrplay.py  soapysdr.py
